// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTableHierarchy should generate nodes and hierarchy correctly 1`] = `
Object {
  "belongsCell": undefined,
  "children": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "$$series_number$$",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "$$series_number$$",
      "label": "序号",
      "level": 0,
      "padding": 0,
      "query": Object {
        "$$series_number$$": "序号",
      },
      "rowIndex": 0,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "province",
      "height": 0,
      "id": "root[&]省份",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "province",
      "label": "省份",
      "level": 0,
      "padding": 0,
      "query": Object {
        "province": "省份",
      },
      "rowIndex": 1,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "省份",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "city",
      "height": 0,
      "id": "root[&]城市",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "city",
      "label": "城市",
      "level": 0,
      "padding": 0,
      "query": Object {
        "city": "城市",
      },
      "rowIndex": 2,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "城市",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "type",
      "height": 0,
      "id": "root[&]类别",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "type",
      "label": "类别",
      "level": 0,
      "padding": 0,
      "query": Object {
        "type": "类别",
      },
      "rowIndex": 3,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "类别",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "sub_type",
      "height": 0,
      "id": "root[&]子类别",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "sub_type",
      "label": "子类别",
      "level": 0,
      "padding": 0,
      "query": Object {
        "sub_type": "子类别",
      },
      "rowIndex": 4,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "子类别",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "number",
      "height": 0,
      "id": "root[&]数量",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "number",
      "label": "数量",
      "level": 0,
      "padding": 0,
      "query": Object {
        "number": "数量",
      },
      "rowIndex": 5,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "数量",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "colIndex": -1,
  "extra": undefined,
  "field": undefined,
  "height": 0,
  "id": "root",
  "inCollapseNode": undefined,
  "isCollapsed": undefined,
  "isGrandTotals": undefined,
  "isLeaf": undefined,
  "isPivotMode": undefined,
  "isSubTotals": undefined,
  "isTotalMeasure": undefined,
  "isTotals": undefined,
  "key": "",
  "label": "",
  "level": undefined,
  "padding": 0,
  "query": undefined,
  "rowIndex": undefined,
  "seriesNumberWidth": undefined,
  "toJSON": [Function],
  "value": "",
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`buildTableHierarchy should generate nodes and hierarchy correctly 2`] = `
Hierarchy1 {
  "allNodesWithoutRoot": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "$$series_number$$",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "$$series_number$$",
      "label": "序号",
      "level": 0,
      "padding": 0,
      "query": Object {
        "$$series_number$$": "序号",
      },
      "rowIndex": 0,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "province",
      "height": 0,
      "id": "root[&]省份",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "province",
      "label": "省份",
      "level": 0,
      "padding": 0,
      "query": Object {
        "province": "省份",
      },
      "rowIndex": 1,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "省份",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "city",
      "height": 0,
      "id": "root[&]城市",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "city",
      "label": "城市",
      "level": 0,
      "padding": 0,
      "query": Object {
        "city": "城市",
      },
      "rowIndex": 2,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "城市",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "type",
      "height": 0,
      "id": "root[&]类别",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "type",
      "label": "类别",
      "level": 0,
      "padding": 0,
      "query": Object {
        "type": "类别",
      },
      "rowIndex": 3,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "类别",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "sub_type",
      "height": 0,
      "id": "root[&]子类别",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "sub_type",
      "label": "子类别",
      "level": 0,
      "padding": 0,
      "query": Object {
        "sub_type": "子类别",
      },
      "rowIndex": 4,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "子类别",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "number",
      "height": 0,
      "id": "root[&]数量",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "number",
      "label": "数量",
      "level": 0,
      "padding": 0,
      "query": Object {
        "number": "数量",
      },
      "rowIndex": 5,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "数量",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "height": 0,
  "indexNode": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "$$series_number$$",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "$$series_number$$",
      "label": "序号",
      "level": 0,
      "padding": 0,
      "query": Object {
        "$$series_number$$": "序号",
      },
      "rowIndex": 0,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "province",
      "height": 0,
      "id": "root[&]省份",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "province",
      "label": "省份",
      "level": 0,
      "padding": 0,
      "query": Object {
        "province": "省份",
      },
      "rowIndex": 1,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "省份",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "city",
      "height": 0,
      "id": "root[&]城市",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "city",
      "label": "城市",
      "level": 0,
      "padding": 0,
      "query": Object {
        "city": "城市",
      },
      "rowIndex": 2,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "城市",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "type",
      "height": 0,
      "id": "root[&]类别",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "type",
      "label": "类别",
      "level": 0,
      "padding": 0,
      "query": Object {
        "type": "类别",
      },
      "rowIndex": 3,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "类别",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "sub_type",
      "height": 0,
      "id": "root[&]子类别",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "sub_type",
      "label": "子类别",
      "level": 0,
      "padding": 0,
      "query": Object {
        "sub_type": "子类别",
      },
      "rowIndex": 4,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "子类别",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "number",
      "height": 0,
      "id": "root[&]数量",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "number",
      "label": "数量",
      "level": 0,
      "padding": 0,
      "query": Object {
        "number": "数量",
      },
      "rowIndex": 5,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "数量",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "maxLevel": 0,
  "sampleNodeForLastLevel": Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "extra": undefined,
    "field": "$$series_number$$",
    "height": 0,
    "id": "root[&]序号",
    "inCollapseNode": undefined,
    "isCollapsed": false,
    "isGrandTotals": false,
    "isLeaf": true,
    "isPivotMode": undefined,
    "isSubTotals": false,
    "isTotalMeasure": false,
    "isTotals": false,
    "key": "$$series_number$$",
    "label": "序号",
    "level": 0,
    "padding": 0,
    "query": Object {
      "$$series_number$$": "序号",
    },
    "rowIndex": 0,
    "seriesNumberWidth": undefined,
    "toJSON": [Function],
    "value": "序号",
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "sampleNodesForAllLevels": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "extra": undefined,
      "field": "$$series_number$$",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "$$series_number$$",
      "label": "序号",
      "level": 0,
      "padding": 0,
      "query": Object {
        "$$series_number$$": "序号",
      },
      "rowIndex": 0,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "width": 0,
}
`;
